--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/src/assets/svg/vite.svg" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dynamic UI</title>
 </head>
 
-<body>
+<body class="app-body" app-data-theme="dark" data-bs-theme="dark">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
