--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body class="app-body" app-data-theme="dark" data-bs-theme="dark">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+  <script src="node_modules/jquery/dist/jquery.min.js"></script>
 </body>
 
 </html>
